H1 spacing fixed on mobile/tablet layouts

--- a/css/index.css
+++ b/css/index.css
@@ -162,10 +162,12 @@ nav h1 {
     padding: 2% 0;
     width: 100%;
     text-align: center;
+    position: relative;
     background-image: linear-gradient(90deg, #d7d7d7 50%, #52BA5D 50%);
   }
   nav h1 span {
-    margin-left: 40px;
+    padding-left: 30px;
+    margin-right: 15px;
   }
 }
 nav h1 span {
