--- a/less/navigation.less
+++ b/less/navigation.less
@@ -21,10 +21,11 @@ nav {
             padding: 2% 0;
             width: 100%;
             text-align: center;
+            position: relative;
             background-image: linear-gradient(90deg, #d7d7d7 50%, #52BA5D 50%);
-            
             span {
-                margin-left: 40px;
+                padding-left: 30px;
+                margin-right: 15px;
             }
         }
 color: #52BA5D;
